Fixed cut off content on footer

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -7,7 +7,7 @@ b {
 }
 
 .content {
-  margin-top: 75px;
+  margin: 75px auto;
 }
 
 .search_header {
